[gd_scene load_steps=3 format=2]

[ext_resource path="res://ListeTresors.gd" type="Script" id=1]
[ext_resource path="res://Tresor.tscn" type="PackedScene" id=2]

[node name="ListeTresors" type="Node2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Croix" parent="." instance=ExtResource( 2 )]
position = Vector2( 1722, -521 )
nom_tresor = "croix"

[node name="Bouteille" parent="." instance=ExtResource( 2 )]
position = Vector2( 1652, -110 )
nom_tresor = "bouteille"

[node name="TShirt" parent="." instance=ExtResource( 2 )]
position = Vector2( 1471, 31 )
nom_tresor = "tshirt"

[node name="Ordi" parent="." instance=ExtResource( 2 )]
position = Vector2( 1131, 489 )
nom_tresor = "ordi"

[node name="Cafetiere" parent="." instance=ExtResource( 2 )]
position = Vector2( 699, 1047 )
nom_tresor = "cafetiere"

[node name="Revue" parent="." instance=ExtResource( 2 )]
position = Vector2( -359, 874 )
nom_tresor = "revue"

[node name="Parfum" parent="." instance=ExtResource( 2 )]
position = Vector2( -699, 1501 )
nom_tresor = "parfum"

[node name="Sapin" parent="." instance=ExtResource( 2 )]
position = Vector2( -1441, 1300 )
nom_tresor = "sapin"

[node name="DentOr" parent="." instance=ExtResource( 2 )]
position = Vector2( -1793, 1360 )
nom_tresor = "dentor"

[node name="Medaillon" parent="." instance=ExtResource( 2 )]
position = Vector2( -2093, 1070 )
nom_tresor = "medaillon"

[connection signal="tresor_pris" from="Croix" to="." method="_on_Croix_tresor_pris"]
[connection signal="tresor_pris" from="Bouteille" to="." method="_on_Bouteille_tresor_pris"]
[connection signal="tresor_pris" from="TShirt" to="." method="_on_TShirt_tresor_pris"]
[connection signal="tresor_pris" from="Ordi" to="." method="_on_Ordi_tresor_pris"]
[connection signal="tresor_pris" from="Cafetiere" to="." method="_on_Cafetiere_tresor_pris"]
[connection signal="tresor_pris" from="Revue" to="." method="_on_Revue_tresor_pris"]
[connection signal="tresor_pris" from="Parfum" to="." method="_on_Parfum_tresor_pris"]
[connection signal="tresor_pris" from="Sapin" to="." method="_on_Sapin_tresor_pris"]
[connection signal="tresor_pris" from="DentOr" to="." method="_on_DentOr_tresor_pris"]
[connection signal="tresor_pris" from="Medaillon" to="." method="_on_Medaillon_tresor_pris"]
